Image zoom feature complete.

--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -19,6 +19,7 @@
 @use 'components/gear-creator';
 @use 'components/sound-settings';
 @use 'components/performance-dashboard';
+@use 'components/image-zoom';
 
 // New components
 @use 'components/sheet/tables';
