--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -1,7 +1,7 @@
 {{!-- Combat Power Chat Card --}}
 <div class="chat-card">
   <div class="chat-card__header chat-card__header--status chat-card__header--image" style="{{style}}">
-    <img src="{{img}}" class="chat-card__image--primary" />
+    <img src="{{img}}" class="chat-card__image--primary" alt="{{name}}" title="Click to enlarge" />
     <div>{{name}}</div>
   </div>
 
