--- a/templates/chat/delete-status-message.hbs
+++ b/templates/chat/delete-status-message.hbs
@@ -1,6 +1,6 @@
 <div class="chat-card">
   <div class="chat-card__header chat-card__header--delete chat-card__header--image">
-    <img src="{{item.img}}" class="chat-card__image--primary" /> 
+    <img src="{{item.img}}" class="chat-card__image--primary" alt="{{item.name}}" title="Click to enlarge" /> 
     <div>{{item.name}} : {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Removed"}}</div>
   </div>
   <div class="chat-card__description">
