--- a/templates/chat/feature-message.hbs
+++ b/templates/chat/feature-message.hbs
@@ -1,6 +1,6 @@
 <div class="chat-card">
 <div class="chat-card__header chat-card__header--status chat-card__header--image" style="{{style}}">
-  <img src="{{item.img}}" class="chat-card__image--primary" />
+  <img src="{{item.img}}" class="chat-card__image--primary" alt="{{item.name}}" title="Click to enlarge" />
   <div>{{item.name}}</div>
 </div>
 
