--- a/templates/chat/transformation-message.hbs
+++ b/templates/chat/transformation-message.hbs
@@ -1,6 +1,6 @@
 <div class="chat-card">
   <header class="chat-card__header chat-card__header--transformation{{#if isApplying}}-remove{{/if}} chat-card__header--image">
-    <img src="{{transformation.img}}" class="chat-card__image--primary" title="{{transformation.name}}" />
+    <img src="{{transformation.img}}" class="chat-card__image--primary" alt="{{transformation.name}}" title="Click to enlarge" />
     <div>{{transformation.name}}</div>
   </header>
 
