--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -65,6 +65,9 @@
   --erps-card-header-transfer: #9B4B7D;
   --erps-card-header-transformation: linear-gradient(270deg, #005716, #06c);
   --erps-card-header-transformation-remove: linear-gradient(270deg, #06c, #005716);
+  --erps-card-header-gm-approval: #0c3667;
+  --erps-card-header-approved: #127707;
+  --erps-card-header-denied: #831600;
 
   // Transformation states
   --erps-transformation-locked: #8A4FFF;
