--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -1,5 +1,11 @@
 {{! Combat Powers Tab }}
 <section class='tab combat-powers {{tab.cssClass}}' data-group='primary' data-tab='combatPowers'>
+  {{#if (and isTransformed hasTransformationCombatPowers)}}
+    <div class="erps-transformation-indicator">
+      <i class="fas fa-mask"></i>
+      <span>{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformationCombatPowers"}}</span>
+    </div>
+  {{/if}}
   <table class='erps-data-table erps-data-table--combat-powers erps-data-table--flush-top'>
     <thead class='erps-data-table__header'>
       <tr class='erps-data-table__header-row'>
