Added new feature and ensured it worked well with the embedded items system.

--- a/src/scss/components/sheet/inputs/_index.scss
+++ b/src/scss/components/sheet/inputs/_index.scss
@@ -12,4 +12,5 @@
 @use "buttons";
 @use "specialized-inputs";
 @use "advanced-inputs";
+@use "item-selector-combo-box";
 @use "responsive-variants"; 
