Added button for new combat power if the player wants to easily create one to match the aciton card.

--- a/templates/item/embedded-items.hbs
+++ b/templates/item/embedded-items.hbs
@@ -55,7 +55,14 @@
           </li>
         </ol>
       {{else}}
-        <div class="erps-items-panel__empty">{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.NoActionItem"}}</div>
+        <div class="erps-items-panel__empty">
+          <p>{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.NoActionItem"}}</p>
+          {{#if @root.editable}}
+            <button type="button" class="erps-button erps-button--primary" data-action="createNewPower">
+              <i class="fas fa-plus"></i> {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.CreateNewPower"}}
+            </button>
+          {{/if}}
+        </div>
       {{/if}}
 
       {{#if @root.editable}}
