Updated embedded item drag and drop functionality to allow for proper item creation.

--- a/templates/item/embedded-items.hbs
+++ b/templates/item/embedded-items.hbs
@@ -17,6 +17,7 @@
           <li
             class="erps-items-panel__item erps-items-panel__item--draggable"
             data-item-id="{{embeddedItem.id}}"
+            data-embedded-type="action-item"
             data-drag="true"
             data-document-class="Item"
             title="{{localize 'EVENTIDE_RP_SYSTEM.Item.ActionCard.DragToExtract'}}"
@@ -97,6 +98,7 @@
             <li
               class="erps-items-panel__item erps-items-panel__item--draggable"
               data-item-id="{{effect.id}}"
+              data-embedded-type="effect"
               data-drag="true"
               data-document-class="Item"
               title="{{localize 'EVENTIDE_RP_SYSTEM.Item.ActionCard.DragToExtract'}}"
