Fixed issue with edit button in transformation action cards as well as issue with drag-and-drop.

--- a/templates/item/embedded-action-cards.hbs
+++ b/templates/item/embedded-action-cards.hbs
@@ -37,6 +37,7 @@
                 <a
                   class="erps-items-panel__control erps-items-panel__control--edit"
                   data-action="editEmbeddedActionCard"
+                  data-action-card-id="{{actionCard.id}}"
                   title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Edit'}}"
                 >
                   <i class="fas fa-edit"></i>
