--- a/templates/item/attribute-parts/action-card.hbs
+++ b/templates/item/attribute-parts/action-card.hbs
@@ -119,6 +119,9 @@
                 <option value="twoSuccesses" {{#if (eq system.attackChain.damageCondition "twoSuccesses")}}selected{{/if}}>
                   {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.TwoSuccesses"}}
                 </option>
+                <option value="rollValue" {{#if (eq system.attackChain.damageCondition "rollValue")}}selected{{/if}}>
+                  {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.RollValue"}}
+                </option>
               </select>
             </div>
             <div>
@@ -146,6 +149,21 @@
                 </option>
               </select>
             </div>
+            {{#if (eq system.attackChain.damageCondition "rollValue")}}
+            <div>
+              <label class="erps-input-label">
+                {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.DamageThreshold"}}
+              </label>
+              <input
+                type="number"
+                class="erps-input"
+                name="system.attackChain.damageThreshold"
+                value="{{system.attackChain.damageThreshold}}"
+                min="1"
+                placeholder="15"
+              />
+            </div>
+            {{/if}}
           </div>
         </div>
 
@@ -184,7 +202,6 @@
                 name="system.attackChain.statusThreshold"
                 value="{{system.attackChain.statusThreshold}}"
                 min="1"
-                max="30"
                 placeholder="15"
               />
             </div>
